re PR objc++/23716 (obj-c++.dg/comp-types-10.mm ICE with the GNU runtime)

fix PR23716

2010-04-07  Iain Sandoe <iains@gcc.gnu.org>

	PR objc++/23716
	* objc-act.c (build_module_initializer_routine): Make the argument
	to objc_start_function NULL_TREE when compiling ObjC++.

2010-04-07  Iain Sandoe <iains@gcc.gnu.org>

	PR objc++/23716
	* obj-c++.dg/comp-types-10.mm: Remove XFAIL.

From-SVN: r158076